# EinsumsClangd

./: .clangd  .gitignore  README.md
.github/workflows/: release.yml
clang-tidy/: CMakeLists.txt  EinsumSpecParser.hpp  EinsumsAllocatingInLoopCheck.cpp  EinsumsAllocatingInLoopCheck.hpp  EinsumsCatch2TensorFixtureLeakCheck.cpp  EinsumsCatch2TensorFixtureLeakCheck.hpp  EinsumsCgCallOutsideCaptureCheck.cpp  EinsumsCgCallOutsideCaptureCheck.hpp  EinsumsDeprecatedApiCheck.cpp  EinsumsDeprecatedApiCheck.hpp  EinsumsDuplicateOutputIndexCheck.cpp  EinsumsDuplicateOutputIndexCheck.hpp  EinsumsMismatchedValueTypeCheck.cpp  EinsumsMismatchedValueTypeCheck.hpp  EinsumsMixedIndexModeCheck.cpp  EinsumsMixedIndexModeCheck.hpp  EinsumsNoLinkIndexCheck.cpp  EinsumsNoLinkIndexCheck.hpp  EinsumsOutputAliasingInputCheck.cpp  EinsumsOutputAliasingInputCheck.hpp  EinsumsOutputNotInInputsCheck.cpp  EinsumsOutputNotInInputsCheck.hpp  EinsumsPreferCgFromTensorAlgebraCheck.cpp  EinsumsPreferCgFromTensorAlgebraCheck.hpp  EinsumsRankMismatchCheck.cpp  EinsumsRankMismatchCheck.hpp  EinsumsRedundantPermuteCheck.cpp  EinsumsRedundantPermuteCheck.hpp  EinsumsRuntimeSpecCheck.cpp  EinsumsRuntimeSpecCheck.hpp  EinsumsTensorByValueParamCheck.cpp  EinsumsTensorByValueParamCheck.hpp  EinsumsTensorViewFromTemporaryCheck.cpp  EinsumsTensorViewFromTemporaryCheck.hpp  EinsumsTidyMatchers.hpp  EinsumsTidyModule.cpp  EinsumsTidyTypeUtils.hpp  README.md
clang-tidy/test/: allocating-in-loop.cpp  catch2-tensor-fixture-leak.cpp  cg-call-outside-capture.cpp  deprecated-api.cpp  duplicate-output-index.cpp  mismatched-value-type.cpp  mixed-index-mode.cpp  no-link-index.cpp  output-aliasing-input.cpp  output-not-in-inputs.cpp  prefer-cg-from-tensoralgebra.cpp  rank-mismatch.cpp  redundant-permute.cpp  run_test.sh  runtime-spec.cpp  tensor-by-value-param.cpp  tensor-view-from-temporary.cpp
clangd-build/: CMakeLists.txt  README.md
clangd-build/test/: lsp_smoke.py
